@@ -1,22 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX bundler-0.9.26-gentoo.patch 2227 RMD160 d3df1628921499a9237d66afbfb83dc35e1c63a6 SHA1 bf61fe9ef235dd9c054dd50b9d7586a8ed254453 SHA256 cfeb392734886cf8325b3bb73e644f6bd2f44703d05debe87e805a8fa5861cba
 AUX bundler-1.0.3-gentoo.patch 604 RMD160 3f673efb4913679a0f925f2d446de246e0b6b3ea SHA1 9edbc0f114120577785f4f13ce2f827df81edc6d SHA256 a21e789e1c8268673aaab471567b83e187475fd23a2303756488b75d2f3df9a0
-DIST bundler-1.0.13.gem 162304 RMD160 4e8fb2324f14e188e607deaf91d020114ab7cb0f SHA1 0eb1f1fc5959d5e45d580c1ce39b5528e742c464 SHA256 4ad01020f6a25331761d821439ff15426c4726b71d347b8e8eda01d7e99dbff0
-DIST bundler-1.0.14.gem 164352 RMD160 62a8961788464d7c7ed699709965dee0eb9f276e SHA1 1741b7aa6969ef32b4a7844e4eece7fc39cf56f4 SHA256 1266f59adcf8a03607657b286268101d0bc2a67243cc480fa47d1a5eb8abc35a
 DIST bundler-1.0.15.gem 164864 RMD160 f1eecbcfa34053dfd2df40cc64ff47023b0fa2df SHA1 a82410b2c06732aaa7bb66c84533500d472649a5 SHA256 37f36b76cb19463738616f098c53610f654b0b246c8b72b3f9694cb28013d11f
-EBUILD bundler-1.0.13.ebuild 1388 RMD160 0ef34e954a762be795252404bae57478386086c0 SHA1 26ac8f96a0dba6feda9d7bd376cd68441534c7d0 SHA256 79c0ba78a311c7ea649b9658a9709c28fc2f23dc82db0a0abbd79cdbd450f9e3
-EBUILD bundler-1.0.14.ebuild 1403 RMD160 29bb455426496af3397f65fc9c4dd232d08b9eaa SHA1 a1a87e55a732782e24804070d52de50eea84f0c8 SHA256 120600e7eda70fbcdf2d7b921a472f1b3f16b15073c742396f15ed78118baac2
 EBUILD bundler-1.0.15.ebuild 1432 RMD160 b133fc6f2a4b11c1fe311820bfc25049176b9890 SHA1 634b7528934923d016f6fbf8abd17f40e61f0f1d SHA256 2e9f37ef420a3ee433d1ef07e0bc1d08dc17029c98ab3901c5627053dc6b28c0
-MISC ChangeLog 3320 RMD160 481a11dd53106fb56d972cc04e1e2736b14dca8c SHA1 313f0702e7692c8c2627c872a702e63cd49da0a7 SHA256 f7d2f450ac885feb677c9f2157c68cabb50b512884520c246fd987cd2ce40a22
+MISC ChangeLog 3440 RMD160 219173dfcf6df3726e1fb3aff982a217a6ffb07f SHA1 693ba0e6ff2c8d9bfccfe1a1545a1b22ce7d230c SHA256 04b44d51947e6033120dfea5e80311b1048a25cf25554cfbf20929504fbf3f74
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQECAAYFAk4r6p8ACgkQIiMqcbOVdxSGNwP/UEkPJKp7CNcnTw5KoEXmwJzb
-qx5AJGpc41PW8gB1T/4sz82XgkhkRVztdFlYXRToJ2poq9cUGr2oBxwExUbu0Dae
-x3xI2kZpIejswAZaIJWDk91nVFigerOEv7HtBb0JLa+Jx4yg9jtFPC18EtqMmqhu
-uuxWAsZ0an93Qff0N7Q=
-=Mb4Z
+iF4EAREIAAYFAk49UCcACgkQiIP6VqMIqNfI4wEAgkok53ZwPY7sfOypkWa0eER5
+5aiKNI4rXxequVo62JwA/2EL2+xOmF4fqB7kTfh4Glv5GqNFtXRN3PZKMVC3vUTo
+=bwB1
 -----END PGP SIGNATURE-----
