@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/bundler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.22 2011/07/24 09:49:13 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.23 2011/08/06 14:30:57 graaff Exp $
+
+  06 Aug 2011; Hans de Graaff <graaff@gentoo.org> -bundler-1.0.13.ebuild,
+  -bundler-1.0.14.ebuild:
+  Remove old versions.
 
   24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> bundler-1.0.15.ebuild:
   Marked ~ppc/~ppc64 wrt #351835
